--- a/taskmaster/src/main/resources/templates/login.html
+++ b/taskmaster/src/main/resources/templates/login.html
@@ -4,10 +4,10 @@
 <div class="bg-blue-500 min-h-screen flex items-center justify-center bg-background dark:bg-black">
     <div class="bg-card dark:bg-card-foreground rounded-lg shadow-lg p-8 max-w-sm w-full">
         <h2 class="text-2xl font-bold text-primary text-center mb-6">Login</h2>
-        <form th:method="post" th:action="@{/users/login}">
+        <form th:method="post" th:action="@{/users/login}" >
             <div class="mb-4">
                 <label for="username" class="block text-sm font-medium text-primary">Username</label>
-                <input
+                <input th:value="${username}"
                         type="text"
                         id="username"
                         name="username"
