--- a/taskmaster/src/main/resources/templates/all-users.html
+++ b/taskmaster/src/main/resources/templates/all-users.html
@@ -5,7 +5,7 @@
 <nav th:replace="~{/fragments/navigation::nav}"></nav>
 <div class="bg-background text-foreground min-h-screen p-4 flex flex-col items-center mb-8">
     <h1 class="text-3xl  mb-4 text-center">All users</h1>
-    <div class="overflow-x-auto w-full max-w-5xl">
+    <div class="overflow-x-auto w-[70em]">
         <table class="min-w-full bg-card rounded-lg table-fixed">
             <thead>
             <tr>
@@ -17,28 +17,36 @@
                 <th class="px-4 py-2 bg-primary text-primary-foreground font-bold uppercase text-sm">Actions</th>
             </tr>
             </thead>
-            <tbody>
-            <tr th:each="user : ${allUsers}" th:object="${user}">
+            <tbody id="users">
+            <tr th:each="user : ${allUsers}" th:object="${user}" th:id="*{id + '-section'}">
                 <td th:text="*{username}" class="px-4 py-2 text-center">JohnDoe</td>
                 <td th:text="*{fullName}" class="px-4 py-2 text-center">John Doe</td>
                 <td th:text="*{email}" class="px-4 py-2 text-center">john.doe@example.com</td>
                 <td th:text="*{age}" class="px-4 py-2 text-center">22</td>
-                <td th:text="*{isAdmin}? 'Admin' : 'User'" class="px-4 py-2 text-center">Admin</td>
+                <td th:text="*{isAdmin}? 'Admin' : 'User'" th:id="*{id + '-role'}" class="px-4 py-2 text-center">Admin
+                </td>
                 <td class="px-4 py-2 text-center">
-                    <button th:text="*{isAdmin}? 'Remove Admin' : 'Make Admin'"
-                            class="mr-2 bg-accent text-accent-foreground px-2 py-1 rounded-lg ml-2">Make Admin</button>
-                    <button th:id="*{username}"
+                    <button th:id="*{id}"
+                            th:text="*{isAdmin}? 'Remove Admin' : 'Make Admin'"
+                            class="make-remove-admin mr-2 bg-accent text-accent-foreground px-2 py-1 rounded-lg ml-2">
+                        Make Admin
+                    </button>
+                    <button th:id="*{id}"
                             class="edit-button bg-secondary text-secondary-foreground px-2 py-1 rounded-lg">Edit
                     </button>
-                    <button class="bg-destructive text-destructive-foreground px-2 py-1 rounded-lg ml-2">Delete</button>
+                    <button  class="bg-destructive text-destructive-foreground px-2 py-1 rounded-lg ml-2">Change
+                        password
+                    </button>
+                    <button th:id="*{id}" class="delete-button bg-destructive text-destructive-foreground px-2 py-1 rounded-lg ml-2">Delete</button>
                 </td>
             </tr>
             </tbody>
         </table>
     </div>
-    <form th:method="put" th:action="@{/users}" th:object="${editData}" class="hidden flex flex-col justify-center gap-6 mt-4  w-[68.8%]"
+    <form th:method="put" th:action="@{/users}" th:object="${editData}"
+          class="hidden flex flex-col justify-center gap-6 mt-4  w-[68.8%]"
           id="editSection">
-        <h2 class="text-xl mb-2 border-solid border-b-2 border-black pb-2 rem mb-4">Edit</h2>
+        <h2 class="text-2xl mb-2 border-solid border-b-2 border-black pb-2 rem mb-4">Edit</h2>
         <input th:field="*{id}" type="hidden" id="id">
         <div class="flex gap-8">
             <div class="w-full md:w-1/2">
@@ -75,7 +83,8 @@
             </div>
             <div class="w-full md:w-1/2">
                 <label class="block mb-3" for="age">Age</label>
-                <input th:field="*{age}" id="age" type="number" class="w-full  text-black border border-primary rounded-md px-3 py-2 mb-2"
+                <input th:field="*{age}" id="age" type="number"
+                       class="w-full  text-black border border-primary rounded-md px-3 py-2 mb-2"
                        placeholder="Age"/>
                 <div th:errors="*{age}"
                      class="text-sm text-destructive">
@@ -87,16 +96,40 @@
             <button class="bg-primary text-primary-foreground px-4 py-2 rounded-lg">Save Changes</button>
         </div>
     </form>
+
+    <form class="p-6 min-w-[45em] hidden">
+        <h2 class="text-2xl mb-2 border-solid border-b-2 border-black pb-2 rem mb-4">Change Password</h2>
+        <div class="flex gap-4">
+            <div class="mb-4 w-full md:w-1/2">
+                <label for="new-password" class="mb-3 block text-sm font-medium text-primary">New Password</label>
+                <input id="new-password" type="password"
+                       class="w-full px-3 py-2 placeholder-input text-input border rounded-lg focus:outline-none focus:ring ring-primary"
+                       placeholder="Enter your new password"/>
+            </div>
+            <div class="mb-4 w-full md:w-1/2">
+                <label for="confirm-password" class="mb-3 block text-sm font-medium text-primary">Confirm Password</label>
+                <input
+                        id="confirm-password"
+                        type="password"
+                        class="w-full px-3 py-2 placeholder-input text-input border rounded-lg focus:outline-none focus:ring ring-primary"
+                        placeholder="Confirm your new password"
+                />
+            </div>
+        </div>
+        <div class="flex justify-start">
+            <button class="bg-primary text-primary-foreground px-4 py-2 rounded-lg">Change password</button>
+        </div>
+    </form>
     <div th:if="${showEdit}" id="scroll"></div>
 </div>
 <footer th:replace="~{/fragments/footer::footer}"></footer>
 </body>
 <script th:if="${showEdit}">
     document.getElementById('editSection').classList.toggle('hidden', false);
-</script>
-<script>
     document.getElementById("scroll")
         .scrollIntoView({block: "end", behavior: "smooth"});
 </script>
+<script th:src="@{/js/user-make-remove-admin.js}"></script>
 <script th:src="@{/js/edit-user.js}"></script>
+<script th:src="@{/js/delete-user.js}"></script>
 </html>
