--- a/taskmaster/src/main/resources/templates/all-users.html
+++ b/taskmaster/src/main/resources/templates/all-users.html
@@ -43,6 +43,10 @@
             </tr>
             </tbody>
         </table>
+        <div class=" mt-4 flex justify-end">
+            <button class="bg-primary text-primary-foreground px-2 py-2 rounded-lg ">Previous</button>
+            <button class="bg-primary text-primary-foreground px-2 py-2 rounded-lg ml-4">Next</button>
+        </div>
     </div>
     <form th:method="put" th:action="@{/users}" th:object="${editData}"
           class="hidden flex flex-col justify-center gap-6 mt-4  w-[68.8%]"
