add paging for users

--- a/taskmaster/src/main/resources/templates/all-users.html
+++ b/taskmaster/src/main/resources/templates/all-users.html
@@ -44,8 +44,10 @@
             </tbody>
         </table>
         <div class=" mt-4 flex justify-end">
-            <button class="bg-primary text-primary-foreground px-2 py-2 rounded-lg ">Previous</button>
-            <button class="bg-primary text-primary-foreground px-2 py-2 rounded-lg ml-4">Next</button>
+            <button onclick="window.location.replace('http://localhost:8080/users/prev-page')"
+                    class="bg-primary text-primary-foreground px-2 py-2 mr-4 rounded-lg ">Previous</button
+            ><button onclick="window.location.replace('http://localhost:8080/users/next-page')"
+                    class="bg-primary text-primary-foreground px-2 py-2 rounded-lg ">Next</button>
         </div>
     </div>
     <form th:method="put" th:action="@{/users}" th:object="${editData}"
