--- a/taskmaster/src/main/resources/templates/all-users.html
+++ b/taskmaster/src/main/resources/templates/all-users.html
@@ -4,7 +4,37 @@
 <body>
 <nav th:replace="~{/fragments/navigation::nav}"></nav>
 <div class="bg-background text-foreground min-h-screen p-4 flex flex-col items-center mb-8">
-    <h1 class="text-3xl  mb-4 text-center">All users</h1>
+    <div class="flex w-[70em] justify-center mb-4">
+        <h1 class="text-3xl ml-auto  mb-4 text-center">All users</h1>
+        <div class="flex items-center space-x-2 ml-auto">
+            <label for="today-sort-by" class="text-zinc-600">Sort by:</label>
+            <select th:selected="${@userPagingAndSortingService.getSortBy()}"
+                    onchange="sortBy(this.value)" id="today-sort-by"
+                    class="bg-input text-zinc-600 border border-input rounded-md px-2 py-1 pr-8">
+                <option value="id">None</option>
+                <option value="username">Username</option>
+                <option value="fullName">Full Name</option>
+                <option value="email">Email</option>
+                <option value="age">Age</option>
+            </select>
+            <select th:selected="${@userPagingAndSortingService.getSortBy()}"
+                    onchange="sortBy(this.value)" id=""
+                    class="bg-input text-zinc-600 border border-input rounded-md px-2 py-1 pr-8">
+                <option value="id">None</option>
+                <option value="username">Username</option>
+                <option value="fullName">Full Name</option>
+                <option value="email">Email</option>
+                <option value="age">Age</option>
+            </select>
+            <div class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none">
+                <svg class="h-4 w-4 text-zinc-600" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                     xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                          d="M19 9l-7 7-7-7"></path>
+                </svg>
+            </div>
+        </div>
+    </div>
     <div class="overflow-x-auto w-[70em]">
         <table class="min-w-full bg-card rounded-lg table-fixed">
             <thead>
@@ -49,17 +79,18 @@
         </table>
         <div class=" mt-4 flex justify-end">
             <button th:if="${@userPagingAndSortingService.hasPrevPage()}"
-                    onclick="window.location.replace('http://localhost:8080/users/prev-page')"
-                    class="bg-primary text-primary-foreground px-2 py-2 mr-4 rounded-lg ">Previous
+                    onclick="prevPage()"
+                    class="ref-on-click bg-primary text-primary-foreground px-2 py-2 mr-4 rounded-lg ">Previous
             </button
             >
             <button th:if="${@userPagingAndSortingService.haseNextPage()}"
-                    onclick="window.location.replace('http://localhost:8080/users/next-page')"
-                    class="bg-primary text-primary-foreground px-2 py-2 rounded-lg ">Next
+                    onclick="nextPage()"
+                    class="ref-on-click bg-primary text-primary-foreground px-2 py-2 rounded-lg ">Next
             </button>
         </div>
     </div>
-    <form th:method="put" th:action="@{/users}" th:object="${editData}"
+    <form th:method="put" th:action="@{/users}"
+          th:object="${editData}"
           class="hidden flex flex-col justify-center gap-6 mt-4  w-[68.8%]"
           id="editSection">
         <h2 id="editLabel" class="text-2xl mb-2 border-solid border-b-2 border-black pb-2 rem mb-4">Edit</h2>
@@ -163,6 +194,36 @@
 </div>
 <footer th:replace="~{/fragments/footer::footer}"></footer>
 </body>
+<script>
+
+    function getUrl(){
+        return new URL(window.location);
+    }
+
+    function reload(url){
+        window.location.replace(url.href);
+    }
+    function nextPage() {
+        let url = getUrl();
+        let newPage = url.searchParams.get('page') == null ? 2 : Number(url.searchParams.get('page')) + 1;
+        url.searchParams.set("page", newPage);
+        reload(url);
+    }
+
+    function sortBy(by) {
+        let url = getUrl();
+        url.searchParams.set('sortBy', by);
+        reload(url);
+    }
+
+    function prevPage() {
+        let url = getUrl();
+        let newPage = url.searchParams.get('page') == null ? 0 : Number(url.searchParams.get('page')) - 1;
+        url.searchParams.set("page", newPage);
+        reload(url);
+    }
+
+</script>
 <script th:if="${showEdit}">
     document.getElementById('editSection').classList.toggle('hidden', false);
     document.getElementById('changePasswordSection').classList.add('hidden');
