--- a/taskmaster/src/main/resources/templates/all-users.html
+++ b/taskmaster/src/main/resources/templates/all-users.html
@@ -4,14 +4,18 @@
 <body>
 <nav th:replace="~{/fragments/navigation::nav}"></nav>
 <div class="bg-background text-foreground min-h-screen p-4 flex flex-col items-center mb-8">
-    <div class="flex w-[70em] justify-center mb-4">
-
-        <h1 class="text-3xl ml-auto  mb-4 text-center">All users</h1>
-        <div class="flex items-center space-x-2 ml-auto">
-            <label for="sort-by" class="text-zinc-600">Sort by:</label>
+    <h1 class="text-3xl mb-6 text-center">All users</h1>
+    <div class="flex w-[70em] justify-end mb-4">
+        <div class="flex items-center space-x-2">
+            <button onclick="search(getElementById('search').value)"
+                    class="px-4 py-2 rounded-lg bg-primary text-primary-foreground">Search
+            </button>
+            <input th:value="${@userPagingAndSortingService.getSearchQuery()}" th:id="search" type="text" placeholder=""
+                   class="w-full md:w-64 text-black px-4 py-2 rounded-lg  focus:outline-none focus:ring focus:ring-primary"/>
+            <label for="sort-by" class="text-base text-primary">Sort by:</label>
             <select th:value="${@userPagingAndSortingService.getSortBy()}"
                     onchange="sortBy(this.value)" id="sort-by"
-                    class="bg-input text-zinc-600 border border-input rounded-md px-2 py-1 pr-8">
+                    class="bg-input text-zinc-600 border border-input rounded-md px-4 py-2 pr-8">
                 <option value="none">None</option>
                 <option th:each="option: ${@userPagingAndSortingService.getSortingFields()}"
                         th:value="${option}"
@@ -20,9 +24,10 @@
                     Username
                 </option>
             </select>
+            <!--         px-2 py-1 pr-8-->
             <select th:value="${@userPagingAndSortingService.getSortDirection()}"
                     onchange="sortDirection(this.value)"
-                    class="bg-input text-zinc-600 border border-input rounded-md px-2 py-1 pr-8">
+                    class="bg-input text-zinc-600 border border-input rounded-md px-4 py-2 pr-8">
                 <option th:selected="${@userPagingAndSortingService.getSortDirection().equals('ASC')}"
                         value="ASC">
                     ASC
@@ -32,13 +37,6 @@
                     DESC
                 </option>
             </select>
-            <div class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none">
-                <svg class="h-4 w-4 text-zinc-600" fill="none" viewBox="0 0 24 24" stroke="currentColor"
-                     xmlns="http://www.w3.org/2000/svg">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                          d="M19 9l-7 7-7-7"></path>
-                </svg>
-            </div>
         </div>
     </div>
     <div class="overflow-x-auto w-[70em]">
@@ -89,7 +87,7 @@
                     class="ref-on-click bg-primary text-primary-foreground px-2 py-2 mr-4 rounded-lg ">Previous
             </button
             >
-            <button th:if="${@userPagingAndSortingService.haseNextPage()}"
+            <button th:if="${@userPagingAndSortingService.hasNextPage()}"
                     onclick="nextPage()"
                     class="ref-on-click bg-primary text-primary-foreground px-2 py-2 rounded-lg ">Next
             </button>
@@ -204,6 +202,13 @@
 
     function getUrl() {
         return new URL(window.location);
+    }
+
+    function search(search) {
+        let newHref = 'http://localhost:8080/users/search';
+        let url = new URL(newHref);
+        url.searchParams.set("search_query", search);
+        reload(url);
     }
 
     function reload(url) {
